# andamio

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: aiops-triage.yml  ci.yml  demo.yml  drift.yml  preview.yml  release.yml  reusable-service-ci.yml  terraform.yml
catalog/: fx-rates.yaml  observability.yaml  platform-cli.yaml
docs/: backstage-migration.md  capabilities.md  platform-as-product.md  slo.md
docs/adr/: 0001-record-architecture-decisions.md  0002-runnable-core-validated-blueprint.md  0003-k3d-over-kind.md  0004-gitops-argocd-app-of-apps.md  0005-build-once-promote-by-digest.md  0006-keyless-oidc-cicd.md  0007-copier-golden-paths.md  0008-catalog-cli-now-backstage-later.md  0009-previews-applicationset-ttl-janitor.md  0010-burn-rate-slo-alerting.md  0011-provider-neutral-contracts-aws-gcp.md  0012-evidence-generated-not-maintained.md  0013-scope-boundaries.md
docs/demo/: golden-path.tape
docs/runbooks/: rb-001-preview-not-collected.md  rb-002-fast-burn-slo.md  rb-003-rollback.md
infra/local/: versions.env
infra/terraform/: .tflint.hcl  README.md
observability/: kustomization.yaml
observability/alerts/: platform.yaml  slo-burn-rate.yaml
observability/dashboards/: platform-overview.json  (+1 more)
platform-cli/: Dockerfile  README.md  pyproject.toml
scripts/: tf-validate.sh
services/fx-rates/: .copier-answers.yml  .dockerignore  Dockerfile  README.md  pyproject.toml
services/fx-rates/src/app/: main.py  rates.py
services/fx-rates/tests/: test_rates.py  test_service.py
(+74 files in other folders)
